[gd_scene load_steps=5 format=3 uid="uid://dpw44kkh0au6w"]

[ext_resource type="Script" path="res://scenes/overworld/Event.gd" id="1"]
[ext_resource type="Shader" path="res://shaders/outline.gdshader" id="2_vbg51"]
[ext_resource type="Texture2D" uid="uid://hmvu8uptgkg6" path="res://imgs/overworld_icons/heart_icon.png" id="3_ifian"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_58eb4"]
shader = ExtResource("2_vbg51")
shader_parameter/color = Color(0.971398, 0.784429, 0.328397, 1)
shader_parameter/width = 0.0
shader_parameter/pattern = 2
shader_parameter/inside = false
shader_parameter/add_margins = true

[node name="Event" type="Node2D"]
script = ExtResource("1")

[node name="Button" type="TextureButton" parent="."]
z_index = 100
material = SubResource("ShaderMaterial_58eb4")
offset_left = -16.0
offset_top = -16.0
offset_right = 48.0
offset_bottom = 48.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("3_ifian")

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
